--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,15 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursssse1234567!!!!</h1>
+<h1 style="color: green ; font-size: 60px;text-align: center;">Aleppo City</h1>
+<p style="margin: 0 100px 0 100px;font-size: 1.5em">Aleppo is the best city to in the world , I am from Syria.Alzahraa</p>
+<P>Aleppo civilization is very uniqe
+.Now i will show you some photos of my city</P>
+<footer>
+	<hr>
+	<p style="text-align: center;" 
+	   onclick="alert('Aleppo Defender')">
+	   tech support: mohmmed97.sy@gmail.com</p>
+</footer>
 </body>
-</html>`
+</html>
