--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,7 @@
 <p style="margin: 0 100px 0 100px;font-size: 1.5em">Aleppo is the best city to in the world , I am from Syria.Alzahraa</p>
 <P>Aleppo civilization is very uniqe
 .Now i will show you some photos of my city</P>
+ <div>*** chapter1 : God bless Syria ***</div>
 <footer>
 	<hr>
 	<p style="text-align: center;" 
