--- a/site/index.html
+++ b/site/index.html
@@ -4,11 +4,19 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
+	<header>Aleppo city</header>
 <h1 style="color: green ; font-size: 60px;text-align: center;">Aleppo City</h1>
 <p style="margin: 0 100px 0 100px;font-size: 1.5em">Aleppo is the best city to in the world , I am from Syria.Alzahraa</p>
 <P>Aleppo civilization is very uniqe
 .Now i will show you some photos of my city</P>
- <div>*** chapter1 : God bless Syria ***</div>
+ <div>*** chapter1 : God bless Syria ***
+ 	<span>chocolate</span>
+ </div>
+ <section>
+ <article>about Aleppo</article>
+  <article>about fostoq</article>
+  <article>about kebeh</article>
+ </section>
 <footer>
 	<hr>
 	<p style="text-align: center;" 
