--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-	<header>Aleppo city</header>
+	<header>aleppo city</header>
 <h1 style="color: green ; font-size: 60px;text-align: center;">Aleppo City</h1>
 <p style="margin: 0 100px 0 100px;font-size: 1.5em">Aleppo is the best city to in the world , I am from Syria.Alzahraa</p>
 <P>Aleppo civilization is very uniqe
