--- a/site/index.html
+++ b/site/index.html
@@ -30,6 +30,21 @@
   					</ul>
   </li>
  </ul>
+ <div>how to make kebbeh?</div>
+ <ul>
+ 	<li>bring groats</li>
+ 	<li>bring meat
+ 			<ol>
+ 				<li>get kharouf meat</li>
+ 				<li>use ta7oneh</li>
+ 				<li>put some tableh</li>
+				<li>add slat</li>
+
+ 			</ol>
+ 	</li>
+ 	<li>bring Onions</li>
+
+  </ul>
 </article>
  </section>
 <footer>
