--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>Aleppo Guide</title>
 </head>
 <body>
 	<header>aleppo city</header>
