--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
 <body>
 	<header>aleppo city</header>
 <h1 style="color: green ; font-size: 60px;text-align: center;">Aleppo City</h1>
-<p style="margin: 0 100px 0 100px;font-size: 1.5em">Aleppo is the best city to in the world , I am from Syria.Alzahraa</p>
+<p style="margin: 0 100px 0 100px;font-size: 1.5em">&lt;&lt;Aleppo is the best city to in the world&gt;&gt;  , I am from Syria.Alzahraa</p>
 <P>Aleppo civilization is very uniqe
 .Now i will show you some photos of my city</P>
  <div>*** chapter1 : God bless Syria ***
