--- a/site/index.html
+++ b/site/index.html
@@ -6,9 +6,9 @@
 <body>
 	<header>aleppo city</header>
 <h1 style="color: green ; font-size: 60px;text-align: center;">Aleppo City</h1>
-<p style="margin: 0 100px 0 100px;font-size: 1.5em">&lt;&lt;Aleppo is the best city to in the world&gt;&gt;  , I am from Syria.Alzahraa</p>
+<p style="margin: 0 100px 0 100px;font-size: 1.5em">&lt;&lt;Aleppo is the best city to in the world&gt;&gt;  ,&nbsp;I&nbsp;am&nbsp;from&nbsp;Syria.Alzahraa</p>
 <P>Aleppo civilization is very uniqe
-.Now i will show you some photos of my city</P>
+.Now i will show you some photos of my city in the highest quality&nbsp;i&nbsp;could&nbsp;capture&nbsp;it</P>
  <div>*** chapter1 : God bless Syria ***
  	<span>chocolate</span>
  </div>
@@ -47,11 +47,15 @@
   </ul>
 </article>
  </section>
+  <a href="CheckForHelp.html" title="check for help">
+      <div> Simple way to get more help</div>
+    </a>
+
 <footer>
 	<hr>
 	<p style="text-align: center;" 
 	   onclick="alert('Aleppo Defender')">
-	   tech support: mohmmed97.sy@gmail.com</p>
+	   &copy;tech support: mohmmed97.sy@gmail.com</p>
 </footer>
 </body>
 </html>
