--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>Aleppo Guide</title>
 </head>
 <body>
-	<header>aleppo city</header>
+	<header></header>
 <h1 id="top" style="color: green ; font-size: 60px;text-align: center;">Aleppo City</h1>
 <p style="margin: 0 100px 0 100px;font-size: 1.5em">&lt;&lt;Aleppo is the best city to in the world&gt;&gt;  ,&nbsp;I&nbsp;am&nbsp;from&nbsp;Syria.Alzahraa</p>
 <ul>
