--- a/site/index.html
+++ b/site/index.html
@@ -6,13 +6,20 @@
 <body>
 	<header></header>
 <h1 id="top" style="color: green ; font-size: 60px;text-align: center;">Aleppo City</h1>
-<p style="margin: 0 100px 0 100px;font-size: 1.5em">&lt;&lt;Aleppo is the best city to in the world&gt;&gt;  ,&nbsp;I&nbsp;am&nbsp;from&nbsp;Syria.Alzahraa</p>
+<p style="margin: 0 100px 0 100px;font-size: 1.5em">&lt;&lt;Aleppo is the best city in the world&gt;&gt;  ,&nbsp;I&nbsp;am&nbsp;from&nbsp;Syria.Alzahraa</p>
 <ul>
 	<li><a href="#economy">More information about Economy</a></li>
 	<li><a href="#history">More information about History</a></li>
 </ul>
 <P>Aleppo civilization is very uniqe
-.Now i will show you some photos of my city in the highest quality&nbsp;i&nbsp;could&nbsp;capture&nbsp;it</P>
+.Now i will show you some photos of my city in the highest quality&nbsp;i&nbsp;could&nbsp;capture&nbsp;it
+<br>
+<img src="mozak.jpg" width="200" height="235" alt="Picture of mozak">
+<img src="salahodeen.jpg" width="200" height="235" alt="Picture of salahodeen">
+<br>
+<img src="aomaoi.jpg" width="405" height="235" alt="Picture of aomaoi">
+</P>
+  
  <div>*** chapter1 : God bless Syria ***
  	<span>chocolate</span>
  </div>
@@ -58,6 +65,9 @@ Very few physical remains have been found from the Roman and Byzantine periods i
   </ul>
 </article>
  </section>
+ <p>
+ 	<img src="http://lorempixel.com/output/nature-q-c-640-480-2.jpg" width="640" height="480">
+ </p>
  <section id="history">
  	 	<h2>About History</h2>
 
