--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 	<title>Aleppo Guide</title>
+	<style>
+p {
+  color: brown;
+  font-size: 20px;
+  
+</style>
+}
 </head>
 <body>
 	<header></header>
