--- a/site/index.html
+++ b/site/index.html
@@ -3,12 +3,29 @@
 <head>
 	<title>Aleppo Guide</title>
 	<style>
-p {
+
+ .text{
   color: brown;
   font-size: 20px;
-  
+  text-align: center;
+background-color: rgb(255,255,153);}
+  h1{
+background-color: rgb(255,255,153)
+  }
+  .img{
+   text-align: center;
+  }
+  h2{
+  	text-align: center;
+  	color: brown;
+  }
+ #food{
+ 	background-color:#8ee8a6;
+ }
+
+ 
 </style>
-}
+
 </head>
 <body>
 	<header></header>
@@ -18,21 +35,20 @@ p {
 	<li><a href="#economy">More information about Economy</a></li>
 	<li><a href="#history">More information about History</a></li>
 </ul>
-<P>Aleppo civilization is very uniqe
+<p class="img">Aleppo civilization is very uniqe
 .Now i will show you some photos of my city in the highest quality&nbsp;i&nbsp;could&nbsp;capture&nbsp;it
 <br>
 <img src="mozak.jpg" width="200" height="235" alt="Picture of mozak">
 <img src="salahodeen.jpg" width="200" height="235" alt="Picture of salahodeen">
-<br>
 <img src="aomaoi.jpg" width="405" height="235" alt="Picture of aomaoi">
-</P>
+</p>
   
  <div>*** chapter1 : God bless Syria ***
  	<span>chocolate</span>
  </div>
  <section id="economy">
  	<h2>About Economy</h2>
- 	<p>
+ 	<p class="text">
  	The names of several bishops of the episcopal see of Beroea, which was in the Roman province of Syria Prima, are recorded in extant documents. The first whose name survives is that of Saint Eustathius of Antioch, who, after being bishop of Beroea, was transferred to the important metropolitan see of Antioch shortly before the 325 First Council of Nicaea. His successor in Beroea Cyrus was for his fidelity to the Nicene faith sent into exile by the Roman Emperor Constantius II. After the Council of Seleucia of 359, called by Constantius, Meletius of Antioch was transferred from Sebastea to Beroea but in the following year was promoted to Antioch. His successor in Beroea, Anatolius, was at a council in Antioch in 363. Under the persecuting Emperor Valens, the bishop of Beroea was Theodotus, a friend of Basil the Great. He was succeeded by Acacius of Beroea, who governed the see for over 50 years and was at the First Council of Constantinople in 381 and the Council of Ephesus in 431. In 438, he was succeeded by Theoctistus, who participated in the Council of Chalcedon in 451 and was a signatory of the joint letter that the bishops of the province of Syria Prima sent in 458 to Emperor Leo I the Thracian about the murder of Proterius of Alexandria. In 518 Emperor Justin I exiled the bishop of Beroea Antoninus for rejecting the Council of Chalcedon. The last known bishop of the see is Megas, who was at a synod called by Patriarch Menas of Constantinople in 536.[48][49] After the Arab conquest, Beroea ceased to be a residential bishopric, and is today listed by the Catholic Church as a titular see.[50]
 
 Very few physical remains have been found from the Roman and Byzantine periods in the Citadel of Aleppo. The two mosques inside the Citadel are known to be converted from churches originally built by the Byzantines.[51] They were later converted into mosques by the Mirdasids during the 11th century.
@@ -43,7 +59,7 @@ Very few physical remains have been found from the Roman and Byzantine periods i
    <br>
   <article>about fostoq</article>
   <br>
-  <article>about kebeh:
+  <article id="food">about kebeh:
   <ul>
   	<li>delecios</li>
   	<li>make you fat</li>
@@ -78,7 +94,7 @@ Very few physical remains have been found from the Roman and Byzantine periods i
  <section id="history">
  	 	<h2>About History</h2>
 
- 	<p>
+ 	<p class="text">
 
  		The Sasanian Persians led by King Khosrow I pillaged and burned Aleppo in 540,[52][53] then they invaded and controlled Syria briefly in the early 7th century. Soon after Aleppo fell to Muslims under Abu Ubaidah ibn al-Jarrah in 637. In 944, it became the seat of an independent Emirate under the Hamdanid prince Sayf al-Dawla, and enjoyed a period of great prosperity, being home to the great poet al-Mutanabbi and the philosopher and polymath al-Farabi.[54] In 962, the city was sacked by the Byzantine general Nicophorus Phocas.[55] Subsequently, the city and its Emirate became a temporary vassal of the Byzantine Empire. For the next few decades the city was disputed by the Fatimid Caliphate and Byzantine Empire, with the nominally independent Hamdanids in between, eventually falling to the Fatimids in 1017.[56] In 1024, Salih ibn Mirdas launched an attack on the Fatimid Aleppo, and after a few months was invited into the city by its population.[57] The city was besieged by Crusaders led by the King of Jerusalem Baldwin II in 1124–1125, but was not conquered after receiving protection by forces of Aqsunqur al Bursuqi arriving from Mosul in January 1125.[58]
 
