--- a/site/index.html
+++ b/site/index.html
@@ -20,7 +20,7 @@ background-color: rgb(255,255,153)
   	color: brown;
   }
  #food{
- 	background-color:#8ee8a6;
+ 	background-color:#c2fcd2;
  }
 
  
