--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,14 @@
 	<title>Aleppo Guide</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<style>
+		body{
+			 background: url('yoyo.jpg') ;
+ 
+		}
+* h1,body{
+	margin: 0;
+	padding: 0;
+}
 
  .text{
   color: brown;
@@ -48,11 +56,18 @@ article li ul li:nth-child(odd) {
   width: 100px;
 }
  header ul  {
- 	margin: 0 0 0 400px
+ 	margin-left: 200px;
+
  }
  #food3 li:nth-child(2):hover {
   background-color: green;
   cursor: pointer;
+}
+body > p {
+	text-transform: capitalize;
+}
+body > div {
+	text-transform: uppercase;
 }
 </style>
 </head>
@@ -61,8 +76,8 @@ article li ul li:nth-child(odd) {
 <h1 id="top" style="color: green ; font-size: 60px;text-align: center;">Aleppo City</h1>
 <p style="margin: 0 100px 0 100px;font-size: 1.5em">&lt;&lt;Aleppo is the best city in the world&gt;&gt;  ,&nbsp;I&nbsp;am&nbsp;from&nbsp;Syria.Alzahraa</p>
 <ul id="links">
-	<li><a href="#economy">More information about Economy</a></li>
-	<li><a href="#history">More information about History</a></li>
+	<li><a href="#economy">More information about Economy</a>
+	<a href="#history">More information about History</a></li>
 </ul>
 <p class="img">Aleppo civilization is very uniqe
 .Now i will show you some photos of my city in the highest quality&nbsp;i&nbsp;could&nbsp;capture&nbsp;it
