--- a/site/index.html
+++ b/site/index.html
@@ -56,7 +56,9 @@ article li ul li:nth-child(odd) {
   width: 100px;
 }
  header ul  {
- 	margin-left: 200px;
+
+ 	margin: 0 0 0 200px;
+ 	
 
  }
  #food3 li:nth-child(2):hover {
@@ -76,8 +78,8 @@ body > div {
 <h1 id="top" style="color: green ; font-size: 60px;text-align: center;">Aleppo City</h1>
 <p style="margin: 0 100px 0 100px;font-size: 1.5em">&lt;&lt;Aleppo is the best city in the world&gt;&gt;  ,&nbsp;I&nbsp;am&nbsp;from&nbsp;Syria.Alzahraa</p>
 <ul id="links">
-	<li><a href="#economy">More information about Economy</a>
-	<a href="#history">More information about History</a></li>
+	<li><a href="#economy">More information about Economy</a></li>
+	<li><a href="#history">More information about History</a></li>
 </ul>
 <p class="img">Aleppo civilization is very uniqe
 .Now i will show you some photos of my city in the highest quality&nbsp;i&nbsp;could&nbsp;capture&nbsp;it
