--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,9 @@
 			 background: url('yoyo.jpg') ;
  
 		}
+		*{
+			box-sizing: border-box;
+		}
 * h1,body{
 	margin: 0;
 	padding: 0;
@@ -30,6 +33,7 @@ background-color: rgb(255,255,153)
   }
  #food{
  	background-color:#c2fcd2;
+ 	clear: both;
  }
  ul #food2 {
  	list-style: none;
@@ -71,6 +75,14 @@ body > p {
 body > div {
 	text-transform: uppercase;
 }
+#split p{
+	
+	width: 50%;
+float: left;
+
+}
+
+
 </style>
 </head>
 <body>
@@ -93,20 +105,26 @@ body > div {
  <div>*** chapter1 : God bless Syria ***
  	<span>chocolate</span>
  </div>
- <section id="economy">
+ <section id="economy" style="margin-bottom: 10px;">
  	<h2>About Economy</h2>
+ 	<div id="split">
  	<p class="text">
- 	The names of several bishops of the episcopal see of Beroea, which was in the Roman province of Syria Prima, are recorded in extant documents. The first whose name survives is that of Saint Eustathius of Antioch, who, after being bishop of Beroea, was transferred to the important metropolitan see of Antioch shortly before the 325 First Council of Nicaea. His successor in Beroea Cyrus was for his fidelity to the Nicene faith sent into exile by the Roman Emperor Constantius II. After the Council of Seleucia of 359, called by Constantius, Meletius of Antioch was transferred from Sebastea to Beroea but in the following year was promoted to Antioch. His successor in Beroea, Anatolius, was at a council in Antioch in 363. Under the persecuting Emperor Valens, the bishop of Beroea was Theodotus, a friend of Basil the Great. He was succeeded by Acacius of Beroea, who governed the see for over 50 years and was at the First Council of Constantinople in 381 and the Council of Ephesus in 431. In 438, he was succeeded by Theoctistus, who participated in the Council of Chalcedon in 451 and was a signatory of the joint letter that the bishops of the province of Syria Prima sent in 458 to Emperor Leo I the Thracian about the murder of Proterius of Alexandria. In 518 Emperor Justin I exiled the bishop of Beroea Antoninus for rejecting the Council of Chalcedon. The last known bishop of the see is Megas, who was at a synod called by Patriarch Menas of Constantinople in 536.[48][49] After the Arab conquest, Beroea ceased to be a residential bishopric, and is today listed by the Catholic Church as a titular see.[50]
-
-Very few physical remains have been found from the Roman and Byzantine periods in the Citadel of Aleppo. The two mosques inside the Citadel are known to be converted from churches originally built by the Byzantines.[51] They were later converted into mosques by the Mirdasids during the 11th century.
+ 	The names of several bishops of the episcopal see of Beroea, which was in the Roman province of Syria Prima, are recorded in extant documents. The first whose name survives is that of Saint Eustathius of Antioch, who, after being bishop of Beroea, was transferred to the important metropolitan see of Antioch shortly before the 325 First Council of Nicaea. His successor in Beroea Cyrus was for his fidelity to the Nicene faith sent into exile by the Roman Emperor Constantius II. After the Council of Seleucia of 359, called by Constantius, Meletius of Antioch was transferred from Sebastea to Beroea but in the following year was promoted to Antioch. His successor in Beroea, Anatolius, was at a council in Antioch in 363. Under the persecuting Emperor Valens, the bishop of Beroea was Theodotus, a friend of Basil the Great. He was succeeded by Acacius of Beroea, who governed the see for over 50 years and was at the First Council of Constantinople in 381 and the Council of Ephesus in 431. 
 </p>
- 	  <br>
+ <p class="text">In 438, he was succeeded by Theoctistus, who participated in the Council of Chalcedon in 451 and was a signatory of the joint letter that the bishops of the province of Syria Prima sent in 458 to Emperor Leo I the Thracian about the murder of Proterius of Alexandria. In 518 Emperor Justin I exiled the bishop of Beroea Antoninus for rejecting the Council of Chalcedon. The last known bishop of the see is Megas, who was at a synod called by Patriarch Menas of Constantinople in 536.[48][49] After the Arab conquest, Beroea ceased to be a residential bishopric, and is today listed by the Catholic Church as a titular see.[50]
 
- <article>about Aleppo</article>
-   <br>
-  <article>about fostoq</article>
+Very few physical remains have been found from the Roman and Byzantine periods in the Citadel of Aleppo. The two mosques inside the Citadel are known to be converted from churches originally built by the Byzantines.[51] They were later converted into mosques by the Mirdasids during the 11th century.</p>
+</div>
+</section>
+<br>
+<br>
   <br>
-  <article id="food">about kebeh:
+  <article id="food">
+  	about Aleppo
+  	<br>
+  	about fostoq
+  	<br>
+  	about kebeh:
   <ul>
   	<li>delecios</li>
   	<li>make you fat</li>
@@ -134,9 +152,10 @@ Very few physical remains have been found from the Roman and Byzantine periods i
 
   </ul>
 </article>
- </section>
- <p>
- 	<img src="http://lorempixel.com/output/nature-q-c-640-480-2.jpg" width="640" height="480">
+ 
+ <p style="text-align: center;">
+ 	<img src=https://c1.wallpaperflare.com/preview/504/73/211/sunset-denmark-sea-coast.jpg width="640" height="480">
+
  </p>
  <section id="history">
  	 	<h2>About History</h2>
