--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Aleppo Guide</title>
+	<title>Aleppo Guide1</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<style>
 		body{
